--- a/Colour Blindness.ipynb
+++ b/Colour Blindness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -10,18 +10,7 @@
      "output_type": "stream",
      "text": [
       "For applying the filter, enter: FILTER\n",
-      "For finding RGB value of a point, enter: RGB RGB\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-e102320cc98e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    232\u001b[0m     \u001b[1;32mwhile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    233\u001b[0m         \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'image'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 234\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwaitKey\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;36m0xFF\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m27\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    235\u001b[0m             \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    236\u001b[0m     \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdestroyAllWindows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "For finding RGB value of a point, enter: RGB FILTER\n"
      ]
     }
    ],
@@ -35,7 +24,7 @@
     "\n",
     "g = input(\"For applying the filter, enter: FILTER\\nFor finding RGB value of a point, enter: RGB \") \n",
     "if g=='FILTER':\n",
-    "    img = cv2.imread('splash.jpg')\n",
+    "    img = cv2.imread('newflag.png')\n",
     "\n",
     "\n",
     "\n",
@@ -43,7 +32,7 @@
     "\n",
     "    hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
     "        \n",
-    "        #defining the range of Yellow color\n",
+    "        #defining the range of colours\n",
     "    yellow_lower = np.array([22,54,252],np.uint8)\n",
     "    yellow_upper = np.array([39,255,255],np.uint8)\n",
     "\n",
@@ -61,7 +50,7 @@
     "    orange_l= np.array([9,58,235],np.uint8)\n",
     "    orange_u = np.array([20,255,255],np.uint8)\n",
     "\n",
-    "        #finding the range yellow colour in the image\n",
+    "        \n",
     "    yellow = cv2.inRange(hsv, yellow_lower, yellow_upper)\n",
     "    redb = cv2.inRange(hsv,red_bl,red_bu)\n",
     "    redg = cv2.inRange(hsv,red_gl,red_gu)\n",
@@ -79,12 +68,7 @@
     "    b4 = cv2.dilate(orange, kernal)\n",
     "\n",
     "    res=cv2.bitwise_and(img, img, mask = yellow)\n",
-    "#for red\n",
-    "#mask1 = cv2.inRange(hsv, (0, 120, 70), (10, 255, 255))\n",
-    "#mask2 = cv2.inRange(hsv, (170, 120, 70), (180, 255, 255))\n",
-    "#mask = mask1 + mask2\n",
     "\n",
-    "#res=cv2.bitwise_and(img, img, mask = mask)\n",
     "\n",
     "\n",
     "    res=cv2.bitwise_and(img, img, mask = redb)\n",
@@ -100,22 +84,16 @@
     "             if(area>300):\n",
     "                        \n",
     "                    x,y,w,h = cv2.boundingRect(contour)     \n",
-    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(0,0,0),1)\n",
-    "                    #print (x,y,w,h)\n",
+    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(0,0,255),2)\n",
+    "                    \n",
     "                    text = 'yellow'\n",
     "                    font = cv2.FONT_HERSHEY_SIMPLEX\n",
-    "                    cv2.putText(img,text,(x+10,y+10), font, 0.5,(0,0,0),1,cv2.LINE_AA)\n",
-    "                    \"\"\"\"roi=img[x:x+w, y:y+h]\n",
-    "                    for i in range (x,x+w)\n",
-    "                       for j in range (y,y+h)\n",
-    "                            color = img[i,j]\n",
-    "                            if (color <= (60,255,255)) && (color >= (22,60,200))\"\"\"\n",
+    "                    cv2.putText(img,text,(x+10,y+10), font, 0.5,(0,0,255),1,cv2.LINE_AA)\n",
+    "                    \n",
     "                                 \n",
     "                            \n",
     "                                                            \n",
-    "#cv2.imshow(\"Color Tracking\",img)\n",
-    "#img = cv2.flip(img,1)\n",
-    "#cv2.imshow(\"Yellow\",res)\n",
+    "\n",
     "\n",
     "              #tracking redb     \n",
     "    (_,contours,hierarchy)=cv2.findContours(redb,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
@@ -125,8 +103,8 @@
     "            if(area>300):\n",
     "                        \n",
     "                    x,y,w,h = cv2.boundingRect(contour)     \n",
-    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,0,0),1)\n",
-    "                    #print (x,y,w,h)  \n",
+    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,0,0),2)\n",
+    "                    \n",
     "                    text = 'red'\n",
     "                    font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "                    cv2.putText(img,text,(x+10,y+10), font, 0.5,(255,0,0),1,cv2.LINE_AA)\n",
@@ -138,9 +116,7 @@
     "                                    color[2]= color[2]+40\n",
     "                                    color[1]=color[1]-20 \n",
     "                    \n",
-    "#cv2.imshow(\"Color Tracking\",img)\n",
-    "#img = cv2.flip(img,1)\n",
-    "#cv2.imshow(\"Yellow\",res)\n",
+    "\n",
     "\n",
     "#tracking redg     \n",
     "    (_,contours,hierarchy)=cv2.findContours(redg,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
@@ -150,8 +126,8 @@
     "            if(area>300):\n",
     "                        \n",
     "                    x,y,w,h = cv2.boundingRect(contour)     \n",
-    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,0,0),1)\n",
-    "                    #print (x,y,w,h)  \n",
+    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,0,0),2)\n",
+    "                    \n",
     "                    text = 'red'\n",
     "                    font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "                    cv2.putText(img,text,(x+10,y+10), font, 0.5,(255,0,0),1,cv2.LINE_AA)\n",
@@ -163,9 +139,7 @@
     "                                    color[2]= color[2]+40\n",
     "                                    color[1]=color[1]-20\n",
     "                    \n",
-    "#cv2.imshow(\"Color Tracking\",img)\n",
-    "#img = cv2.flip(img,1)\n",
-    "#cv2.imshow(\"Yellow\",res)\n",
+    "\n",
     "\n",
     "#tracking green     \n",
     "    (_,contours,hierarchy)=cv2.findContours(green,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
@@ -175,11 +149,11 @@
     "             if(area>300):\n",
     "                        \n",
     "                    x,y,w,h = cv2.boundingRect(contour)     \n",
-    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(0,255,0),1)\n",
-    "                    #print (x,y,w,h)\n",
+    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,0,255),2)\n",
+    "                    \n",
     "                    text = 'green'\n",
     "                    font = cv2.FONT_HERSHEY_SIMPLEX\n",
-    "                    cv2.putText(img,text,(x+10,y+10), font, 0.5,(0,255,0),1,cv2.LINE_AA)\n",
+    "                    cv2.putText(img,text,(x+10,y+10), font, 0.5,(255,0,255),1,cv2.LINE_AA)\n",
     "\n",
     "                     \n",
     "                    roi=img[x:x+w, y:y+h]\n",
@@ -199,8 +173,8 @@
     "            if(area>300):\n",
     "                        \n",
     "                    x,y,w,h = cv2.boundingRect(contour)     \n",
-    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,255,255),1)\n",
-    "                    #print (x,y,w,h)\n",
+    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,255,255),2)\n",
+    "                    \n",
     "                    text = 'brown'\n",
     "                    font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "                    cv2.putText(img,text,(x+10,y+10), font, 0.5,(255,255,255),1,cv2.LINE_AA)\n",
@@ -213,8 +187,8 @@
     "            if(area>300):\n",
     "                        \n",
     "                    x,y,w,h = cv2.boundingRect(contour)     \n",
-    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,255,0),1)\n",
-    "                    #print (x,y,w,h)\n",
+    "                    img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,255,0),2)\n",
+    "                    \n",
     "                    text = 'orange'\n",
     "                    font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "                    cv2.putText(img,text,(x+10,y+10), font, 0.5,(255,255,0),1,cv2.LINE_AA)\n",
@@ -228,17 +202,17 @@
     "\n",
     "    cv2.imshow(\"Color Tracking\",img)\n",
     "    img = cv2.flip(img,1)\n",
-    "#cv2.imshow(\"Yellow\",res)\n",
+    "\n",
     "    cv2.waitKey(0)\n",
-    "        #cap.release()\n",
+    "        \n",
     "    cv2.destroyAllWindows()\n",
-    "       # break\n",
+    "       \n",
     "        \n",
     "        \n",
-    "if g=='RGB':\n",
+    "elif g=='RGB':\n",
     "    events = [i for i in dir(cv2) if 'EVENT' in i]\n",
     "    \n",
-    "    def draw_circle(event,x,y,flags,param):\n",
+    "    def rgb_val(event,x,y,flags,param):\n",
     "        if event == cv2.EVENT_LBUTTONDBLCLK:\n",
     "            region = img[x:x+2, y:y+2]\n",
     "            b, g, r = np.mean(region, axis=(0, 1))\n",
@@ -251,18 +225,27 @@
     "                    text = 'red'\n",
     "            font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "            cv2.putText(img,text,(x,y), font, 1,(255,255,255),2,cv2.LINE_AA)\n",
-    "        #cv.circle(img,(x,y),10,(255,0,0),-1)\n",
-    "# Create a black image, a window and bind the function to window\n",
+    "        \n",
     "    img = cv2.imread('splash.jpg')\n",
     "    cv2.namedWindow('image')\n",
-    "    cv2.setMouseCallback('image',draw_circle)\n",
+    "    cv2.setMouseCallback('image',rgb_val)\n",
     "\n",
     "    while(1):\n",
     "        cv2.imshow('image',img)\n",
     "        if cv2.waitKey(20) & 0xFF == 27:\n",
     "            break\n",
-    "    cv2.destroyAllWindows()\n"
+    "    cv2.destroyAllWindows()\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
